Fix Message Components for Tags with Attributes

Don't assume that the close tag is the length of the start tag +1

BUG: 482331